client/core/include/surf/input.h

typedef enum surf_input_result {
    SURF_INPUT_ERROR_OVERFLOW = -2,
    SURF_INPUT_ERROR_ARGUMENT = -1,
    SURF_INPUT_OK = 0
} surf_input_result_t;
/*
 * Host-independent input ordering. `sequence` is scoped to the currently
 * presented video surface; interaction IDs and timestamps remain monotonic
 * across surface changes so media diagnostics can correlate an input with the
 * first frame it caused.
 */
typedef struct surf_input_state {
    uint64_t sequence;
    uint64_t interaction_id;
    uint64_t last_timestamp_ns;
    uint32_t surface_generation;
    uint32_t reserved;
} surf_input_state_t;
typedef struct surf_input_causal {
    uint64_t interaction_id;
    uint64_t client_ns;
} surf_input_causal_t;
/* Coordinates and deltas are fractions of the exact presented surface. */
typedef struct surf_input_sample {
    uint64_t sequence;
    uint64_t interaction_id;
    uint64_t client_ns;
    uint64_t event_ns;
    uint32_t surface_generation;
    uint32_t reserved;
    double x;
    double y;
    double delta_x;
    double delta_y;
} surf_input_sample_t;